<resources>
    <string name="app_name">Who Sings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="artist">Artist</string>
    <string name="well_done">Well Done %s!</string>
    <string name="you_lost">OHH, YOU LOST %s!</string>
    <string name="your_score">Your score is : %d</string>
    <string name="latest_score">Your last score is : %d</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="play_game">Play Game</string>
    <string name="leader_board">Leader Board</string>
    <string name="question_1">Question : %d</string>
    <string name="current_score_0">Current Score : 0</string>
    <string name="lyrics_here">Lyrics Here</string>
    <string name="next_questions">Next Questions</string>
    <string name="current_score">Current Score : %d</string>
    <string name="home">Home</string>
    <string name="highest_score_is">Your highest Score : %d</string>
    <string name="game_records">Game Records</string>
    <string name="your_score_record">Your Score Record</string>
    <string name="date">Date</string>
    <string name="order">Order</string>
    <string name="you_haven_t_play_any_games_yet">You haven\'t play any games yet</string>
</resources>